rnsc/test_data/rns_integration/error/parser/outside_class_directive/before_class_dir/string_literal.rns
"Hello World"
.class public HelloWorld
.super java/lang/Object
